# Adaptive-Huffman

./: CMakeLists.txt  README.md  main.cpp
inc/: ahdecode.h  ahencode.h  decoder.h  encoder.h  model.h
src/: ahdecode.cpp  ahencode.cpp  decoder.cpp  encoder.cpp  model.cpp
